--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -34,69 +34,80 @@ a {
   min-width: 127px;
 }
 
+div[name=Center] {
+  margin-top: -50px;
+}
+
+.column-RootSidebar, .column-ThreadList, #message-list .scroll-region .scroll-region-content-inner, .column-MessageListSidebar {
+	padding-top: 50px;
+}
+
 // HEADER
 
 .sheet-toolbar {
   border: none;
+	opacity: 0.9;
 }
 
 .sheet-toolbar-container {
   background: #f4f4f4;
 }
 
-.sheet-toolbar .btn-toolbar {
-  position: relative;
-  box-shadow: none;
-  background: #fff;
-  cursor: pointer;
-  &:hover {
-    background: #eaeaea;
+.btn-toolbar, .sheet-toolbar .btn-toolbar {
+  &:not(.btn-emphasis) {
+    position: relative;
+    box-shadow: none;
+    background: #fff;
+    cursor: pointer;
+    &:hover {
+      background: #eaeaea;
+      &:before {
+        opacity: 1;
+        bottom: -5px;
+      }
+      &:after {
+        opacity: 1;
+        bottom: -5px;
+      }
+      .content-mask {
+        transform: translate3d(0, -3px, 0);
+      }
+    }
+
     &:before {
-      opacity: 1;
-      bottom: -5px;
+      content: '';
+      position: absolute;
+      bottom: -12px;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border: solid 5px transparent;
+      border-bottom-color: @tooltip-color;
+      opacity: 0;
+      transform: translate3d(-50%, 0, 0);
+      transition: all 0.2s ease-out;
+      z-index: 3;
+      pointer-events: none;
     }
     &:after {
-      opacity: 1;
-      bottom: -5px;
+      content: attr(title);
+      position: absolute;
+      bottom: -12px;
+      left: 50%;
+      padding: 6px 10px;
+      transform: translate3d(-50%, 100%, 0);
+      background: @tooltip-color;
+      color: @tooltip-text-color;
+      opacity: 0;
+      white-space: nowrap;
+      z-index: 2;
+      border-radius: 2px;
+      transition: all 0.2s ease-out;
+      pointer-events: none;
     }
     .content-mask {
-      transform: translate3d(0, -3px, 0);
+      transition: transform 0.2s ease-out;
     }
-  }
-
-  &:before {
-    content: '';
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    width: 0;
-    height: 0;
-    border: solid 5px transparent;
-    border-bottom-color: @tooltip-color;
-    opacity: 0;
-    transform: translate3d(-50%, 0, 0);
-    transition: all 0.2s ease-out;
-    z-index: 3;
-    pointer-events: none;
-  }
-  &:after {
-    content: attr(title);
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    padding: 6px 10px;
-    transform: translate3d(-50%, 100%, 0);
-    background: @tooltip-color;
-    color: @tooltip-text-color;
-    opacity: 0;
-    white-space: nowrap;
-    z-index: 2;
-    border-radius: 2px;
-    transition: all 0.2s ease-out;
-    pointer-events: none;
-  }
-  .content-mask {
-    transition: transform 0.2s ease-out;
   }
 }
 
@@ -257,6 +268,11 @@ body.is-blurred {
 
 .thread-list .list-column, .draft-list .list-column, .list-container .list-item.focused .list-column {
   border-bottom-color: rgba(221, 221, 221, 0.3);
+}
+
+#message-list .message-item-wrap .message-item-white-wrap.composer-outer-wrap.focused {
+  box-shadow: none;
+  outline: 1px solid @ac;
 }
 
 // SIDEBAR
