--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -22,6 +22,10 @@
 	100% { transform: translate3d(0, 0, 0); opacity: 1; }
 };
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Helvetica", 'Lucida Grande', 'Segoe UI', sans-serif;
+}
+
 a {
   color: @ac;
 }
