--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -138,6 +138,12 @@ input[type="text"].input-bordered, input[type="email"].input-bordered, input[typ
   box-shadow: none;
 }
 
+#account-switcher .item.dropping, #account-sidebar .item.dropping{
+	background: none;
+	border: none;
+  box-shadow: none;
+}
+
 .sidebar-activity .item {
   border: none;
 }
